--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 <!doctype=html>
 <html>
   <head>
-  <title>Jovain Careers</title>  
+  <title>Jovian Careers</title>  
   </head>
 <body>
+  <h1>Jovian Careers</h1>
+  <img src="https://jovian-careers-website#Static/Banner.jpg" >
   Hello there , you learn about the job openings at Jovian here.
 </body>
 </html>
