--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
   </head>
 <body>
   <h1>Jovian Careers</h1>
-  <img src="https://jovian-careers-website#Static/Banner.jpg" >
-  Hello there , you learn about the job openings at Jovian here.
+  <img src="https://replit.com/@naikraj1234/jovian-careers-website#Static/Banner.jpg" >
+  
 </body>
 </html>
