--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,58 @@
 <!doctype=html>
 <html>
   <head>
-  <title>Jovian Careers</title>  
+    <style>
+      h1 {
+        font-size: 40px;
+        font-family: Roboto;
+        font-weight: normal;
+        color: rgb(50, 50, 50);
+        text-align: center;
+      }
+
+      #banner{
+        width: 100%;
+        height:  360px;
+        object-fit: cover;
+      }
+
+      h2{
+        font-family: Roboto;
+        font: size; : 32px;
+        color: rgb(100,100,100);
+      }
+
+      .bodytext{
+        font-fmaily: roboto;
+        color: rgb(80, 80, 80);
+        
+      }
+
+      #Container{
+        max-width: 720px;
+        margin: 0 auto 0 auto;
+      }
+
+      
+    </style>
+  <title>Deetya Careers</title>  
   </head>
 <body>
-  <h1>Jovian Careers</h1>
-  <img src="https://replit.com/@naikraj1234/jovian-careers-website#Static/Banner.jpg" >
-  
+  <div id="Container">
+    <h1>Deetya Careers</h1>
+    <img id="banner" src=https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2607&q=80"
+ height="320">  
+    <h2> About Deetya Careers </h2>
+    <p class="bodytext" >  asdjg;eajs;gajs j;sfdja;gjesa;jgfgaslhgasjg;asg
+ ghesalgjaslglahglf agflaghlahgla 
+    </p> 
+    <h2> Open Position </h2>
+    <p class="bodytext"> To do</p>
+    <div style= "text-align:center">
+    <button> Contact Us </button>
+    <p> Copyright @ 2023 </p>
+    </div>
+    
+  </div>
 </body>
 </html>
