--- a/templates/home.html
+++ b/templates/home.html
@@ -1,56 +1,38 @@
 <!doctype=html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    
+      <title>Deetya Careers</title>  
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50, 50, 50);
-        text-align: center;
-      }
-
       #banner{
+        height: 360px;
         width: 100%;
-        height:  360px;
-        object-fit: cover;
+        object-fit:cover;
       }
-
-      h2{
-        font-family: Roboto;
-        font: size; : 32px;
-        color: rgb(100,100,100);
-      }
-
-      .bodytext{
-        font-fmaily: roboto;
-        color: rgb(80, 80, 80);
-        
-      }
-
-      #Container{
-        max-width: 720px;
-        margin: 0 auto 0 auto;
-      }
-
-      
     </style>
-  <title>Deetya Careers</title>  
   </head>
 <body>
-  <div id="Container">
-    <h1>Deetya Careers</h1>
-    <img id="banner" src=https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2607&q=80"
- height="320">  
-    <h2> About Deetya Careers </h2>
-    <p class="bodytext" >  asdjg;eajs;gajs j;sfdja;gjesa;jgfgaslhgasjg;asg
- ghesalgjaslglahglf agflaghlahgla 
+  <div class="container">
+    <h1 class="text-center mt-2 mb-4 ">Deetya Careers</h1>
+    <img class="img-fluid" id="banner" src=https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2607&q=80"> 
+
+    
+    <h2 class="text-center mt-4"> About Deetya Careers </h2>
+    <p class="lead">  asdjg;eajs;gajs j;sfdja;gjesa;jgfgaslhgasjg;asg
+ ghesalgjaslglahglf agflaghlahgla ds;jg;saj;gjasd;gjsa;gjas;gjas;gjdas;gjas;dgjdas;jg;asjh;adsjg;saga
+      jg;asdjg;asjg;sajg;jas;dg
+       hgalsag;as 
+       alghdsalghas
+       
     </p> 
-    <h2> Open Position </h2>
-    <p class="bodytext"> To do</p>
-    <div style= "text-align:center">
-    <button> Contact Us </button>
-    <p> Copyright @ 2023 </p>
+    <h2 class="text-center mt-2"> Open Position </h2>
+    <p > To do</p>
+    <div  class="text-center mt-2">
+    <button class="btn btn-primary btn-lg"> Contact Us </button>
+    <p class="mt-4"> Copyright @ 2023 </p>
     </div>
     
   </div>
